--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Your name here'
+name: 'Manage Collaborators'
 description: 'Run this action to provide access to users for certain repositories'
 author: 'gateixeira'
 inputs:
